--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -2,21 +2,11 @@
     display: block;
     height: 100%;
     width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
   }
   
   #map {
     height: 100%;
     width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
   }
 
   ::ng-deep {
